Change theme function prefix

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 /*-----------------------------------------------------------------------------------
   	Version: 1.0
     Theme Name: Rimi
-    Theme URI: mellanynews.magazine-themes.net
+    Theme URI: riminews.magazine-themes.net
     Description: Magazin / Blog
     Author: Madars Bitenieks
     Author URI: http://themeforest.net/user/magazine-themes
