--- a/style.css
+++ b/style.css
@@ -3806,7 +3806,7 @@ ul.page-numbers li {
   width: 100%;
   position: fixed;
   z-index: 99999;
-  margin: 0 0 0 -400px;
+  margin: 0 0 0 100%;
   -webkit-transition: transform .7s ease;
   -moz-transition: transform .7s ease;
   -o-transition: transform .7s ease;
@@ -3872,11 +3872,11 @@ ul.page-numbers li {
   padding: 7px;
 }
 .mobile-menu-active .mt-smart-menu {
-  -webkit-transform: translate3d(400px, 0, 0);
-  -moz-transform: translate3d(400px, 0, 0);
-  -ms-transform: translate3d(400px, 0, 0);
-  -o-transform: translate3d(400px, 0, 0);
-  transform: translate3d(400px, 0, 0);
+  -webkit-transform: translate3d(100%, 0, 0);
+  -moz-transform: translate3d(100%, 0, 0);
+  -ms-transform: translate3d(100%, 0, 0);
+  -o-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
 }
 .mt-outer-wrap {
     position: relative;
