--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
 /*-----------------------------------------------------------------------------------
   	Version: 1.0
     Theme Name: Rimi
-    Theme URI: riminews.magazine-themes.net
+    Theme URI: http://rimi.tophot.staging.wpengine.com/
     Description: Magazin / Blog
     Author: Madars Bitenieks
-    Author URI: http://themeforest.net/user/magazine-themes
+    Author URI: http://themeforest.net/user/madza
     License: GNU General Public License version 3.0
     License URI: http://www.gnu.org/licenses/gpl-3.0.html
-	Author Madars Bitenieks for http://themeforest.net/user/magazine-themes
+	Author Madars Bitenieks for http://themeforest.net/user/madza
     All files, unless otherwise stated, are released under the GNU General Public License
     version 3.0 (http://www.gnu.org/licenses/gpl-3.0.html)
     Text Domain: rimi
