--- a/style.css
+++ b/style.css
@@ -2607,7 +2607,7 @@ background-color: rgba(0,0,0,.6);
   color: white !important;
 }
 .boxed-layout-on .mt-content-container .row .col-md-12 > div,
-.boxed-layout-on .footer-wrap .container > div {
+.boxed-layout-on .footer-wrap {
     overflow: hidden;
 }
 .single .author-info strong {
