--- a/style.css
+++ b/style.css
@@ -1026,7 +1026,7 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
 
 /* HEAD MENU GLOBAL */
 .menu-background {
-  background: #e1631a;
+  background: #ff6226;
 }
 .top-nav {
   color: white;
