--- a/style.css
+++ b/style.css
@@ -1283,7 +1283,7 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
   padding: 13px 20px;
   height: 46px;
   border-left: 10px solid white;
-  background: #9a7fa9;
+  background: #7a7b86;
   display: inline-block;
 }
 .nav-url a:hover {
