--- a/style.css
+++ b/style.css
@@ -938,7 +938,7 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
   text-align: center;
 }
 .head-nav a {
-  color: #939292;
+  color: #7a7b86;
   font-weight:900;
   font-size: 13px;
   margin: 0px 10px 0px 30px;
