--- a/style.css
+++ b/style.css
@@ -964,7 +964,7 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
 .head-social ul li a {
   display: inline-block;
   padding: 5px;
-  color: #939292;
+  color: #7a7b86;
   font-size: 14px;
 }
 
