--- a/style.css
+++ b/style.css
@@ -3642,9 +3642,7 @@ blockquote {
 .letter-wrap {
     margin-bottom: 40px;
     padding: 4px;
-    background-image: repeating-linear-gradient(135deg, #000, #000 10px, #FFF 0px, #FFF 20px, #85adff 0px, #85adff 30px, #FFF 0px, #FFF 40px);
-    background-image: repeating-linear-gradient(135deg, #000, #000 10px, #FFF 0px, #FFF 20px, #85adff 0px, #85adff 30px, #FFF 0px, #FFF 40px);
-    background-image: repeating-linear-gradient(135deg, #000, #000 10px, #FFF 0px, #FFF 20px, #85adff 0px, #85adff 30px, #FFF 0px, #FFF 40px);
+    background: #ff6226;
 }
 
 /* SO PLUGIN */
