--- a/style.css
+++ b/style.css
@@ -996,15 +996,15 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
 }
 .head-time #time-live {
   font-size: 17px;
-  color: #252b42;
+  color: #7a7b86;
 }
 .head-time #time-live span {
   font-size: 17px;
-  color: #7a7c86;
+  color: #7a7b86;
 }
 .head-time .time-date {
   font-size: 13px;
-  color: #252b42;
+  color: #7a7b86;
   font-weight: 700;
 }
 
