--- a/style.css
+++ b/style.css
@@ -921,7 +921,7 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
 }
 
 /* COLORS */
-.color-silver-light { color: #949494 }
+.color-silver-light { color: #7a7b86 }
 
 /* HEADER */
 .mt-header-container {
