--- a/style.css
+++ b/style.css
@@ -2098,7 +2098,7 @@ h2.heading span {
 }
 .nav-links a:hover {
   color: white;
-  background: #6b8db9;
+  background: #ff6226;
 }
 .post-style-8 .single-media-top {
 -webkit-box-shadow: inset 0 0 190px 0 #000;
