--- a/style.css
+++ b/style.css
@@ -1633,7 +1633,7 @@ h2.heading span {
 }
 .poster-cat .poster-image {
   display: none;
-}
+}.poster:hover h2, .poster-small:hover h4
 .poster.video .poster-image .video-icon {
   width: 100%;
   height: 100%;
@@ -1722,7 +1722,7 @@ h2.heading span {
 }
 .poster:hover h2,
 .poster-small:hover h4{
-  color: #6b8db9;
+  color: #ff6226;
 }
 .poster.large {
   margin-bottom: 0px;
