--- a/style.css
+++ b/style.css
@@ -323,7 +323,7 @@ input[type="button"] {
 button:hover,
 input[type="submit"]:hover,
 input[type="button"]:hover {
-  background: #6b8db9!important;
+  background: #ff6226!important;
 }
 .form-submit {
   padding: 5px 0px 40px;
@@ -807,7 +807,7 @@ ul.sf-menu ul, div.sf-menu ul ul {
   margin-bottom: 20px;
 }
 .megamenu-span:hover h4 {
-  background: #6b8db9;
+  background: #ff6226;
 }
 .megamenu-span a{
   display: block;
@@ -947,7 +947,7 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
 }
 .head-nav a:hover,
 .head-nav a.active {
-  color: #6b8db9;
+  color: #ff6226;
 }
 .head-nav a span {
   font-weight:400;
@@ -1021,7 +1021,7 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
   text-transform: uppercase;
 }
 .head-bookmark a:hover {
-  color: #6b8db9;
+  color: #ff6226;
 }
 
 /* HEAD MENU GLOBAL */
@@ -1164,7 +1164,7 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
   font-size: 18px;
 }
 .hover-menu a:hover {
-  color: #6b8db9;
+  color: #ff6226;
 }
 .hover-menu .mobile ul {
   margin: 0px;
@@ -1225,7 +1225,7 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
   border-right: 1px solid #e2e2e2;
 }
 .fixed-top-menu ul li a:hover {
-  color: #6b8db9;
+  color: #ff6226;
 }
 .fixed-top {
   -webkit-backface-visibility: hidden;
@@ -1722,7 +1722,8 @@ h2.heading span {
 }
 .poster:hover h2,
 .poster-small:hover h4{
-  color: #ff6226;
+  color: #ff6226
+  ;
 }
 .poster.large {
   margin-bottom: 0px;
@@ -1863,7 +1864,7 @@ h2.heading span {
 }
 .poster-next:hover,
 .poster-prev:hover {
-  background: #6b8db9;
+  background: #ff6226;
 }
 .poster-next {
   padding: 7px 20px 4px 8px;
@@ -2035,7 +2036,7 @@ h2.heading span {
 }
 .post-gallery-nav .slick-arrow.slick-prev:hover:before,
 .post-gallery-nav .slick-arrow.slick-next:hover:before {
-  background: #6b8db9;
+  background: #ff6226;
 }
 .post-gallery-nav .slick-arrow.slick-prev:before {
   content: "\61";
@@ -2094,7 +2095,7 @@ h2.heading span {
 }
 .nav-links a:hover {
   color: white;
-  background: #6b8db9;
+  background: #ff6226;
 }
 .post-style-8 .single-media-top {
 -webkit-box-shadow: inset 0 0 190px 0 #000;
@@ -2451,7 +2452,7 @@ background-color: rgba(0,0,0,.6);
 .nav-single .next div:after {
   content: "\62";
   font-family: "madza";
-  color: #6b8db9;
+  color: #ff6226;
   width: 30px;
   font-size: 21px;
   margin-right: -30px;
@@ -2463,7 +2464,7 @@ background-color: rgba(0,0,0,.6);
 .nav-single .previous div:before {
   content: "\61";
   font-family: "madza";
-  color: #6b8db9;
+  color: #ff6226;
   width: 30px;
   top: 0px;
   font-size: 21px;
@@ -2626,7 +2627,7 @@ background-color: rgba(0,0,0,.6);
   padding: 12px 0px 10px 35px;
   font-size: 18px;
   display: inline-block;
-  color: #6b8db9
+  color: #ff6226
 }
 .stat-views:before {
     content: "\64";
@@ -2794,7 +2795,7 @@ blockquote {
   padding-bottom: 0px;
 }
 .comment-respond .logged-in-as a {
-  color: #6b8db9
+  color: #ff6226
 }
 .comment-respond .logged-in-as a:hover {
   color: #000113
@@ -3035,7 +3036,7 @@ blockquote {
   text-align: center;
 }
 .footer .mail {
-  color: #6b8db9;
+  color: #ff6226;
 }
 .footer-logo {
   padding-top: 75px;
@@ -3069,7 +3070,7 @@ blockquote {
     width: 45px;
     height: 45px;
     text-align: center;
-    background: #6b8db9;
+    background: #ff6226;
     font-weight: bold;
     color: #fff;
     float:right;
@@ -3086,7 +3087,7 @@ blockquote {
   width: 45px;
   height: 45px;
   text-align: center;
-  background: #6b8db9;
+  background: #ff6226;
   font-weight: bold;
   color: #fff;
   right: 20px;
@@ -3095,7 +3096,7 @@ blockquote {
   display: inline-block;
 }
 .arrow {
-  border-bottom: 0px solid #6b8db9;
+  border-bottom: 0px solid #ff6226;
 }
 
 .hide-desktop {
@@ -4371,7 +4372,7 @@ img.mfp-img {
 }
 .mt-load-more:hover {
   color: white;
-  background: #6b8db9;
+  background: #ff6226;
 }
 .mt-load-more .on {
   position: relative;
