--- a/style.css
+++ b/style.css
@@ -1433,11 +1433,11 @@ h2.heading span {
 .social-text {
   float: right;
 }
-.social-facebook { background: #2d5f9a; }
+.social-facebook { color: #2d5f9a; }
 .social-facebook:before { content: "\77"; }
-.social-twitter { background: #2ecff8; }
+.social-twitter { color: #2ecff8; }
 .social-twitter:before { content: "\6c"; }
-.social-youtube { background: #b6b6b7; }
+.social-youtube { color: #b6b6b7; }
 .social-youtube:before { content: "\69"; }
 
 .social-github { background: #6e5494; }
