--- a/style.css
+++ b/style.css
@@ -1433,19 +1433,19 @@ h2.heading span {
 .social-text {
   float: right;
 }
-.social-facebook { color: #2d5f9a; }
+.social-facebook abbr { color: #2d5f9a; }
 .social-facebook:before { content: "\77"; }
-.social-twitter { color: #2ecff8; }
+.social-twitter a { color: #2ecff8; }
 .social-twitter:before { content: "\6c"; }
-.social-youtube { color: #b6b6b7; }
+.social-youtube a { color: #b6b6b7; }
 .social-youtube:before { content: "\69"; }
 
-.social-github { color: #6e5494; }
+.social-github a { color: #6e5494; }
 .social-github:before { content: "\e910"; }
-.social-googleplus { color: #d34836; }
+.social-googleplus a { color: #d34836; }
 .social-googleplus:before { content: "\72"; }
-.social-instagram {
-  background: #bc2a8d;
+.social-instagram a {
+  color: #bc2a8d;
   background: -webkit-radial-gradient(32% 106%, circle cover, rgb(255, 225, 125) 0%, rgb(255, 205, 105) 10%, rgb(250, 145, 55) 28%, rgb(235, 65, 65) 42%, transparent 82%), -webkit-linear-gradient(-45deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
 	background: -moz-radial-gradient(32% 106%, circle cover, rgb(255, 225, 125) 0%, rgb(255, 205, 105) 10%, rgb(250, 145, 55) 28%, rgb(235, 65, 65) 42%, transparent 82%), -moz-linear-gradient(-45deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
 	background: radial-gradient(circle farthest-corner at 32% 106%, rgb(255, 225, 125) 0%, rgb(255, 205, 105) 10%, rgb(250, 145, 55) 28%, rgb(235, 65, 65) 42%, transparent 82%), linear-gradient(135deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
