--- a/style.css
+++ b/style.css
@@ -1419,6 +1419,7 @@ h2.heading span {
   display: block;
   padding: 12px 15px;
   margin-bottom: 0px;
+  color: white;
   position: relative;
 }
 .socials a span,
@@ -1432,27 +1433,27 @@ h2.heading span {
 .social-text {
   float: right;
 }
-.social-facebook a { color: #2d5f9a; }
+.social-facebook { color: #2d5f9a; }
 .social-facebook:before { content: "\77"; }
-.social-twitter a { color: #2ecff8; }
+.social-twitter { color: #2ecff8; }
 .social-twitter:before { content: "\6c"; }
-.social-youtube a { color: #b6b6b7; }
+.social-youtube { color: #b6b6b7; }
 .social-youtube:before { content: "\69"; }
 
-.social-github a { color: #6e5494; }
+.social-github { color: #6e5494; }
 .social-github:before { content: "\e910"; }
-.social-googleplus a { color: #d34836; }
+.social-googleplus { color: #d34836; }
 .social-googleplus:before { content: "\72"; }
-.social-instagram a {
-  color: #bc2a8d;
+.social-instagram {
+  background: #bc2a8d;
   background: -webkit-radial-gradient(32% 106%, circle cover, rgb(255, 225, 125) 0%, rgb(255, 205, 105) 10%, rgb(250, 145, 55) 28%, rgb(235, 65, 65) 42%, transparent 82%), -webkit-linear-gradient(-45deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
 	background: -moz-radial-gradient(32% 106%, circle cover, rgb(255, 225, 125) 0%, rgb(255, 205, 105) 10%, rgb(250, 145, 55) 28%, rgb(235, 65, 65) 42%, transparent 82%), -moz-linear-gradient(-45deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
 	background: radial-gradient(circle farthest-corner at 32% 106%, rgb(255, 225, 125) 0%, rgb(255, 205, 105) 10%, rgb(250, 145, 55) 28%, rgb(235, 65, 65) 42%, transparent 82%), linear-gradient(135deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
 }
 .social-instagram:before { content: "\6d"; }
-.social-linkedin a { color: #0077B5; }
+.social-linkedin { color: #0077B5; }
 .social-linkedin:before { content: "\71"; }
-.social-pinterest a { color: #cb2027; }
+.social-pinterest { color: #cb2027; }
 .social-pinterest:before { content: "\70"; }
 .social-soundcloud { color: #f50; }
 .social-soundcloud:before { content: "\e912"; }
