--- a/style.css
+++ b/style.css
@@ -1402,7 +1402,7 @@ h2.heading.heading-right span {
 }
 h2.heading span {
   background: white;
-  border: 1px solid #111;
+  border: 1px solid #7a7b86;
   z-index: 2;
   position: relative;
   padding: 3px 10px;
