--- a/style.css
+++ b/style.css
@@ -1419,6 +1419,7 @@ h2.heading span {
   display: block;
   padding: 12px 15px;
   margin-bottom: 0px;
+  color: white;
   position: relative;
 }
 .socials a span,
@@ -1432,16 +1433,16 @@ h2.heading span {
 .social-text {
   float: right;
 }
-.social-facebook { color: #2d5f9a; }
+.social-facebook { background: #2d5f9a; }
 .social-facebook:before { content: "\77"; }
-.social-twitter { color: #2ecff8; }
+.social-twitter { background: #2ecff8; }
 .social-twitter:before { content: "\6c"; }
-.social-youtube { color: #b6b6b7; }
+.social-youtube { background: #b6b6b7; }
 .social-youtube:before { content: "\69"; }
 
-.social-github { color: #6e5494; }
+.social-github { background: #6e5494; }
 .social-github:before { content: "\e910"; }
-.social-googleplus { color: #d34836; }
+.social-googleplus { background: #d34836; }
 .social-googleplus:before { content: "\72"; }
 .social-instagram {
   background: #bc2a8d;
@@ -1450,19 +1451,19 @@ h2.heading span {
 	background: radial-gradient(circle farthest-corner at 32% 106%, rgb(255, 225, 125) 0%, rgb(255, 205, 105) 10%, rgb(250, 145, 55) 28%, rgb(235, 65, 65) 42%, transparent 82%), linear-gradient(135deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
 }
 .social-instagram:before { content: "\6d"; }
-.social-linkedin { color: #0077B5; }
+.social-linkedin { background: #0077B5; }
 .social-linkedin:before { content: "\71"; }
-.social-pinterest { color: #cb2027; }
+.social-pinterest { background: #cb2027; }
 .social-pinterest:before { content: "\70"; }
-.social-soundcloud { color: #f50; }
+.social-soundcloud { background: #f50; }
 .social-soundcloud:before { content: "\e912"; }
-.social-steam { color: #666666; }
+.social-steam { background: #666666; }
 .social-steam:before { content: "\e90f"; }
-.social-tumblr { color: #32506d; }
+.social-tumblr { background: #32506d; }
 .social-tumblr:before { content: "\e90e"; }
-.social-twitch { color: #6441a5; }
+.social-twitch { background: #6441a5; }
 .social-twitch:before { content: "\e90c"; }
-.social-vimeo { color: #aad450; }
+.social-vimeo { background: #aad450; }
 .social-vimeo:before { content: "\4f"; }
 .socials a:before {
   font-family: "madza";
