--- a/style.css
+++ b/style.css
@@ -1604,6 +1604,7 @@ h2.heading span {
   background: white;
   padding: 3px 6px 3px 0px;
   font-size: 13px;
+  margin-top: 10px;
 }
 .poster-data span,
 .poster-data .counte {
