--- a/style.css
+++ b/style.css
@@ -1387,6 +1387,7 @@ h2.heading {
   font-size: 13px;
   padding-bottom: 20px;
   padding-top: 0px;
+  color: #7a7b86;
 }
 h2.heading.heading-left {
   text-align: left;
@@ -1402,7 +1403,7 @@ h2.heading.heading-right span {
 }
 h2.heading span {
   background: white;
-  border: 1px solid #7a7b86;
+  border-left: 10px solid #7a7b86;
   z-index: 2;
   position: relative;
   padding: 3px 10px;
