--- a/style.css
+++ b/style.css
@@ -1439,7 +1439,7 @@ h2.heading span {
 .social-facebook:before { content: "\77"; }
 .social-twitter { background: #2ecff8; }
 .social-twitter:before { content: "\6c"; }
-.social-youtube { background: #b6b6b7; }
+.social-youtube { background: #7a7b86; }
 .social-youtube:before { content: "\69"; }
 
 .social-github { background: #6e5494; }
