--- a/style.css
+++ b/style.css
@@ -4495,9 +4495,8 @@ img.mfp-img {
 
 .background-ad {
   width: 100%;
-  height: 100%;
+  height: auto;
   position: absolute;
   left: 0;
   top: 0;
-  background: black
 }
