--- a/style.css
+++ b/style.css
@@ -4495,8 +4495,8 @@ img.mfp-img {
 
 .background-ad {
   width: 100%;
-  height: auto;
-  position: absolute;
+  height: 100%;
+  position: fixed;
   left: 0;
   top: 0;
 }
