--- a/style.css
+++ b/style.css
@@ -671,6 +671,7 @@ table {
 .post-style-6 .post-media-wrap,
 .post-style-4 .post-media-wrap,
 .header-wrap,
+.footer-wrap .footer-page,
 .mt-container-wrap,
 .single-top,
 .post-media-wrap {
