--- a/style.css
+++ b/style.css
@@ -2218,10 +2218,10 @@ background-color: rgba(0,0,0,.6);
 }
 
 .grid-post .poster-cat span {
-  background: rgba(0, 0, 0, 0.5);
+  background: #ff6226;
   color: white;
   font-size: 11px;
-  padding: 5px 10px;
+  padding: 8px 11px
 }
 .grid-post.style-1.nr-3 .post-info,
 .grid-post.style-1.nr-4 .post-info {
@@ -2287,10 +2287,10 @@ background-color: rgba(0,0,0,.6);
   font-weight: 700;
 }
 .single-media-title .single-cat-wrap .post-categories li a {
-  padding: 3px 5px;
+  padding: 8px 11px;
   color: white;
   font-size: 11px;
-  background: rgb(255, 98, 38);
+  background: #ff6226;
 }
 .single-media-title .color-silver-light {
   color: white;
