--- a/style.css
+++ b/style.css
@@ -2291,6 +2291,7 @@ background-color: rgba(0,0,0,.6);
   color: white;
   font-size: 11px;
   background: #ff6226;
+  font-weight: bold;
 }
 .single-media-title .color-silver-light {
   color: white;
