--- a/style.css
+++ b/style.css
@@ -2292,6 +2292,7 @@ background-color: rgba(0,0,0,.6);
   font-size: 11px;
   background: #ff6226;
   font-weight: bold;
+  margin-bottom: 5px
 }
 .single-media-title .color-silver-light {
   color: white;
