--- a/style.css
+++ b/style.css
@@ -2326,12 +2326,14 @@ background-color: rgba(0,0,0,.6);
   padding-right: 5px;
 }
 .single-cat-wrap .post-categories li a{
-  background: #4a7aba;
+  background: #ff6226;
   color: white;
   text-transform: uppercase;
-  font-size: 12px;
+  font-size: 11px;
+  font-weight: bold;
   display: inline-block;
-  padding: 3px 8px;
+  padding: 8px 1px;
+  margin-bottom: 10px;
 }
 .single-title {
   margin: 0px;
