--- a/style.css
+++ b/style.css
@@ -1007,7 +1007,7 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
 }
 .head-time #time-live {
   font-size: 17px;
-  color: #7a7b86;
+  color: #ff6226;
 }
 .head-time #time-live span {
   font-size: 17px;
