--- a/style.css
+++ b/style.css
@@ -2112,6 +2112,14 @@ h2.heading span {
   color: white;
   background: #ff6226;
 }
+.nav-links > span {
+  padding: 10px 20px;
+  display: inline-block;
+  margin-bottom: 40px;
+  margin-top: 20px;
+  text-transform: uppercase;
+  font-size: 14px;
+}
 .post-style-8 .single-media-top {
 -webkit-box-shadow: inset 0 0 190px 0 #000;
 -moz-box-shadow: inset 0 0 190px 0 #000;
