--- a/style.css
+++ b/style.css
@@ -2119,7 +2119,7 @@ h2.heading span {
   margin-top: 20px;
   text-transform: uppercase;
   font-size: 14px;
-  background: white;
+  background: white !important;
 }
 .post-style-8 .single-media-top {
 -webkit-box-shadow: inset 0 0 190px 0 #000;
