--- a/style.css
+++ b/style.css
@@ -1412,7 +1412,8 @@ h2.heading.heading-left span {
 h2.heading.heading-right span {
   padding: 3px 10px;
 }
-h2.heading span {
+h2.heading span,
+.pagination > h2 {
   background: white;
   border-left: 0px solid #7a7b86;
   z-index: 2;
