--- a/style.css
+++ b/style.css
@@ -1401,10 +1401,8 @@ h2.heading,
   padding-top: 0px;
   color: #7a7b86;
 }
+h2.heading.heading-left,
 .pagination > h2 {
-  text-align: left;
-}
-h2.heading.heading-left {
   text-align: left;
 }
 h2.heading.heading-right {
