--- a/style.css
+++ b/style.css
@@ -2122,7 +2122,8 @@ h2.heading span,
   margin-top: 20px;
   text-transform: uppercase;
   font-size: 14px;
-  background: white !important;
+  background: #ff6226 !important;
+  color: white !important;
 }
 .post-style-8 .single-media-top {
 -webkit-box-shadow: inset 0 0 190px 0 #000;
