--- a/style.css
+++ b/style.css
@@ -2125,6 +2125,9 @@ h2.heading span,
   background: #ff6226 !important;
   color: white !important;
 }
+.search .navigation.pagination {
+  margin-top: 20px;
+}
 .post-style-8 .single-media-top {
 -webkit-box-shadow: inset 0 0 190px 0 #000;
 -moz-box-shadow: inset 0 0 190px 0 #000;
