--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@ input[type="button"] {
   padding: 15px 30px;
   display: inline-block;
   line-height: 1;
-  background: #19192a !important;
+  background: #7a7b86 !important;
   border: 0px solid silver;
 }
 button:hover,
