--- a/style.css
+++ b/style.css
@@ -3508,6 +3508,7 @@ blockquote {
   }
   .entry-content {
     padding-right: 0px;
+    padding-left: 0px;
   }
   .nav-search-wrap {
     position: static;
