--- a/style.css
+++ b/style.css
@@ -3241,7 +3241,9 @@ blockquote {
 }
 
 @media all and (max-width: 991px) {
-
+  .background-ad {
+    display: none;
+  }
   .shadow-wrap .mt-outer-wrap {
     -webkit-box-shadow: 0 0 100px #8c8c8c;
     -moz-box-shadow: 0 0 100px #8c8c8c;
