--- a/style.css
+++ b/style.css
@@ -3169,7 +3169,10 @@ blockquote {
 @media all and (max-width: 1199px) {
 
   .poster.size-350.normal .poster-image {
-    width: 240px;
+    width: 170px;
+  }
+  .poster.normal .poster-image {
+    margin-right: 20px;
   }
   .boxed-layout-on .poster-next {
     left: 10px
