--- a/style.css
+++ b/style.css
@@ -3374,7 +3374,7 @@ blockquote {
     float: none !important
   }
   .mt-tabc {
-    float: none;
+    float: none !important;
     display: inline-block;
   }
   h2.heading.heading-left span,
