--- a/style.css
+++ b/style.css
@@ -3376,6 +3376,7 @@ blockquote {
   .mt-tabc {
     float: none !important;
     display: inline-block;
+    margin-bottom: 20px;
   }
   h2.heading.heading-left span,
   h2.heading.heading-right span {
