--- a/style.css
+++ b/style.css
@@ -3469,6 +3469,17 @@ blockquote {
 }
 
 @media all and (max-width: 715px) {
+  h2.heading.heading-left,
+  h2.heading.heading-right,
+  .mt-post-tabs-nav {
+    text-align: center !important;
+    float: none !important
+  }
+  .mt-tabc {
+    float: none !important;
+    display: inline-block;
+    margin-bottom: 20px;
+  }
   .size-350 .poster-image {
     float: none !important;
     margin-right: 0px !important;
