--- a/style.css
+++ b/style.css
@@ -520,6 +520,7 @@ pre {
     background: #f5f5f5;
     margin-top: 0px;
     margin-bottom: 20px;
+    padding: 20px
 }
 select {
   width: 100%;
@@ -2772,9 +2773,21 @@ background-color: rgba(0,0,0,.6);
   padding-left: 40px;
   padding-bottom: 20px;
 }
-.entry-content ul, .entry-content ol {
-    margin: 0px 0px 20px 20px;
-    padding: 0px;
+.entry-content ul,
+.entry-content ol{
+  margin: 0px 0px 20px 40px;
+  padding: 0px;
+}
+.entry-content ul li,
+.entry-content ol li{
+  margin: 0px 0px 20px 0px;
+  padding: 0px;
+}
+.entry-content ul ul,
+.entry-content ol ul,
+.entry-content ul ol,
+.entry-content ol ol {
+  margin: 20px 0px 0px 10px;
 }
 blockquote {
   font-size: 21px !important;
