--- a/style.css
+++ b/style.css
@@ -2773,6 +2773,9 @@ background-color: rgba(0,0,0,.6);
   padding-left: 40px;
   padding-bottom: 20px;
 }
+.entry-content:after {
+  clear: both;
+}
 .entry-content ul,
 .entry-content ol{
   margin: 0px 0px 20px 40px;
