--- a/style.css
+++ b/style.css
@@ -2773,8 +2773,14 @@ background-color: rgba(0,0,0,.6);
   padding-left: 40px;
   padding-bottom: 20px;
 }
+.entry-content:before {
+  content: "";
+  display: table;
+  table-layout: fixed;
+}
 .entry-content:after {
   clear: both;
+  content: ""
 }
 .entry-content ul,
 .entry-content ol{
