--- a/style.css
+++ b/style.css
@@ -2768,7 +2768,12 @@ background-color: rgba(0,0,0,.6);
   margin-bottom: 0px !important;
   margin-top: 0px !important;
 }
-.entry-content {
+body.blog article {
+  padding-bottom: 40px;
+  margin-bottom: 40px;
+  border-bottom: 2px solid #40424c;
+}
+.single .entry-content {
   padding-right: 49px;
   padding-left: 40px;
   padding-bottom: 20px;
