--- a/style.css
+++ b/style.css
@@ -550,13 +550,13 @@ iframe {
   margin: 20px 0px 40px;
   position: relative;
   padding: 0 0 0 20px;
-  border-left: 5px solid #40424c;
+  border-left: 5px solid #020214;
 }
 blockquote p {
   font-size: 21px !important;
   font-weight: 900;
   line-height: 1.4;
-  color: #40424c !important;
+  color: #020214 !important;
   padding-bottom: 0px;
 }
 .wp-caption {
@@ -2267,7 +2267,7 @@ background-color: rgba(0,0,0,.6);
   overflow: hidden;
 }
 .single-content p {
-    color: #1b1c2a;
+    color: #7a7b86;
 }
 .post-style-8 .single-media-top {
   height: 600px;
