--- a/style.css
+++ b/style.css
@@ -1739,7 +1739,7 @@ h2.heading span,
   padding-top:0px;
 }
 .poster-content p {
-  color: #92939c
+  color: #7a7b86
 }
 .poster:hover h2,
 .poster-small:hover h4{
