--- a/style.css
+++ b/style.css
@@ -550,7 +550,7 @@ iframe {
   margin: 20px 0px 40px;
   position: relative;
   padding: 0 0 0 20px;
-  border-left: 5px solid #020214;
+  border-left: 5px solid #ff6110;
 }
 blockquote p {
   font-size: 21px !important;
