--- a/style.css
+++ b/style.css
@@ -2600,9 +2600,6 @@ background-color: rgba(0,0,0,.6);
   font-size: 15px;
   padding-left: 80px
 }
-.entry-meta .author-info {
-  background: #f9f9f9 !important;
-}
 .single-media-title .mt-author-soc a:before   {
   color: white;
 }
@@ -2617,11 +2614,11 @@ background-color: rgba(0,0,0,.6);
 }
 .entry-meta .author-avatar img {
   display:inline-block;
-  margin: -20px 10px 0px -40px;
+  margin: -20px 20px 0px -40px;
   float: left;
-  -webkit-border-radius: 25px;
-  -moz-border-radius: 25px;
-  border-radius: 25px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
 }
 .author-info {
   margin-left: 40px
@@ -2631,7 +2628,7 @@ background-color: rgba(0,0,0,.6);
 }
 .entry-meta .author-info {
   padding: 20px 40px 40px;
-  margin-bottom: 40px;.author-description h3
+  margin-bottom: 40px;
   margin-left: 0px;
 }
 
