--- a/style.css
+++ b/style.css
@@ -864,7 +864,7 @@ ul.sf-menu > li.current-cat > a::before, div.sf-menu ul > ul > li.current-cat > 
 ul.sf-menu > li.current_page_item > a::before, div.sf-menu > ul > ul > li.current_page_item > a::before,
 ul.sf-menu > li.current-menu-item > a::before, div.sf-menu ul > ul > li.current-menu-item > a::before,
 ul.sf-menu > li.current-menu-ancestor > a::before, div.sf-menu > ul > ul > li.current-menu-ancestor > a::before {
-  border: 1px solid rgb(255, 255, 255)
+  border-bottom: 10px solid #c64909;
 }
 ul.sf-menu ul li.current-cat > a, div.sf-menu ul ul ul li.current-cat > a,
 ul.sf-menu ul li.current-menu-item > a, div.sf-menu ul ul ul li.current-menu-item > a,
