--- a/style.css
+++ b/style.css
@@ -908,9 +908,7 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
 	height: 0;
 	width: 0;
 	/* order of following 3 rules important for fallbacks to work */
-	border: 5px solid transparent;
-	border-top-color: #dFeEFF; /* edit this to suit design (no rgba in IE8) */
-	border-top-color: rgba(255,255,255,.5);
+=
 }
 .sf-arrows > li > .sf-with-ul:focus:after,
 .sf-arrows > li:hover > .sf-with-ul:after,
