--- a/style.css
+++ b/style.css
@@ -2198,6 +2198,7 @@ h2.heading span,
   color: white;
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4);
   padding-top: 5px;
+  font-weight: 800
 }
 .grid-post .post-info {
   color: white;
