--- a/style.css
+++ b/style.css
@@ -1618,6 +1618,7 @@ h2.heading span,
   padding: 3px 6px 3px 0px;
   font-size: 11px;
   margin-top: 10px;
+  font-weight: bold
 }
 .poster-data span,
 .poster-data .counte {
@@ -1628,6 +1629,9 @@ h2.heading span,
 }
 .poster-data:first-child i {
   padding-left: 0px;
+}
+.poster-data:before {
+  font-weight: normal!important;
 }
 .poster-info .poster-data {
   display:none;
