--- a/style.css
+++ b/style.css
@@ -1618,6 +1618,7 @@ h2.heading span,
   padding: 3px 6px 3px 0px;
   font-size: 11px;
   margin-top: 10px;
+  font-weight: bold;
 }
 .poster-data span,
 .poster-data .counte {
