--- a/style.css
+++ b/style.css
@@ -313,12 +313,14 @@ input[type="submit"],
 input[type="button"] {
   width: auto !important;
   color: white;
-  font-size: 16px;
+  font-size: 13px;
   padding: 15px 30px;
   display: inline-block;
   line-height: 1;
   background: #7a7b86 !important;
   border: 0px solid silver;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 button:hover,
 input[type="submit"]:hover,
