--- a/style.css
+++ b/style.css
@@ -2865,8 +2865,8 @@ blockquote {
 }
 .comment-adres-not-publish {
   font-size: 14px;
-  color: #949494;
-  margin: -10px 0px 20px;
+  color: #7a7b86;
+  margin: -15px 0px 20px;
   display: block;
 }
 .mt-coment-nav {
