--- a/style.css
+++ b/style.css
@@ -2436,7 +2436,7 @@ h2.heading span,
 }
 .share li.share-more a .share-more-icon,
 .share-more-wrap .share-more-icon{
-  background: #b8b8b8;
+  background: #7a7b86;
   padding: 12px 16px 13px;
   font-size: 24px;
 }
