--- a/style.css
+++ b/style.css
@@ -895,6 +895,18 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
 	background: #60626b;
 }
 
+.mt-menu-cursor {
+  position: absolute;
+}
+.menu-item-has-children, .page_item_has_children, .df-is-megamenu {
+  padding-right: 5px;
+}
+.mt-menu-cursor:before {
+    content: "\e905";
+    font-family: madza;
+    margin-right: -8px;
+}
+
 /*** arrows (for all except IE7) **/
 .sf-arrows .sf-with-ul {
 	padding-right: 2.5em;
