--- a/style.css
+++ b/style.css
@@ -869,7 +869,7 @@ ul.sf-menu > li.current-cat > a::before, div.sf-menu ul > ul > li.current-cat > 
 ul.sf-menu > li.current_page_item > a::before, div.sf-menu > ul > ul > li.current_page_item > a::before,
 ul.sf-menu > li.current-menu-item > a::before, div.sf-menu ul > ul > li.current-menu-item > a::before,
 ul.sf-menu > li.current-menu-ancestor > a::before, div.sf-menu > ul > ul > li.current-menu-ancestor > a::before {
-  background: rgba(0, 0, 0, 0.16);
+  
 }
 ul.sf-menu ul li.current-cat > a, div.sf-menu ul ul ul li.current-cat > a,
 ul.sf-menu ul li.current-menu-item > a, div.sf-menu ul ul ul li.current-menu-item > a,
@@ -877,6 +877,7 @@ ul.sf-menu ul li.current_page_item > a, div.sf-menu ul ul ul li.current_page_ite
 ul.sf-menu ul li.current-menu-ancestor > a, div.sf-menu ul ul ul li.current-menu-ancestor > a,
 ul.sf-menu ul li a:hover, div.sf-menu ul ul li a:hover {
   background: #7a7c86 !important;
+  color: rgba(0, 0, 0, 0.33);
 }
 .sf-menu li {
 	white-space: nowrap; /* no need for Supersubs plugin */
