--- a/style.css
+++ b/style.css
@@ -863,13 +863,13 @@ div.sf-menu > ul > li > a::before {
   position: absolute;
   z-index: -1;
 }
-.sf-menu > li.current_page_item > a::before, div.sf-menu > ul > li.current_page_item > a::before,
-.sf-menu > li > a:hover::before, div.sf-menu > ul > li > a:hover::before,
-ul.sf-menu > li.current-cat > a::before, div.sf-menu ul > ul > li.current-cat > a::before,
-ul.sf-menu > li.current_page_item > a::before, div.sf-menu > ul > ul > li.current_page_item > a::before,
-ul.sf-menu > li.current-menu-item > a::before, div.sf-menu ul > ul > li.current-menu-item > a::before,
-ul.sf-menu > li.current-menu-ancestor > a::before, div.sf-menu > ul > ul > li.current-menu-ancestor > a::before {
-  
+.sf-menu > li.current_page_item > a, div.sf-menu > ul > li.current_page_item > a,
+.sf-menu > li > a:hover, div.sf-menu > ul > li > a:hover,
+ul.sf-menu > li.current-cat > a, div.sf-menu ul > ul > li.current-cat > a,
+ul.sf-menu > li.current_page_item > a, div.sf-menu > ul > ul > li.current_page_item > a,
+ul.sf-menu > li.current-menu-item > a, div.sf-menu ul > ul > li.current-menu-item > a,
+ul.sf-menu > li.current-menu-ancestor > a, div.sf-menu > ul > ul > li.current-menu-ancestor > a {
+  color: rgba(0, 0, 0, 0.33);
 }
 ul.sf-menu ul li.current-cat > a, div.sf-menu ul ul ul li.current-cat > a,
 ul.sf-menu ul li.current-menu-item > a, div.sf-menu ul ul ul li.current-menu-item > a,
@@ -877,7 +877,6 @@ ul.sf-menu ul li.current_page_item > a, div.sf-menu ul ul ul li.current_page_ite
 ul.sf-menu ul li.current-menu-ancestor > a, div.sf-menu ul ul ul li.current-menu-ancestor > a,
 ul.sf-menu ul li a:hover, div.sf-menu ul ul li a:hover {
   background: #7a7c86 !important;
-  color: rgba(0, 0, 0, 0.33);
 }
 .sf-menu li {
 	white-space: nowrap; /* no need for Supersubs plugin */
