--- a/style.css
+++ b/style.css
@@ -1254,7 +1254,7 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
   color: #ff6226;
 }
 .fixed-top {
-  margin-top: -300px;
+  margin-top: -300px!important;
   -webkit-backface-visibility: hidden;
   height: 45px;
   -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
@@ -1272,10 +1272,10 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
   -moz-transform: translate(0,300px); /** Firefox **/
 }
 .nav-down.fixed-on .fixed-top {
-  transform: translate(0,45px);
-  -webkit-transform: translate(0,45px); /** Safari & Chrome **/
-  -o-transform: translate(0,45px); /** Opera **/
-  -moz-transform: translate(0,45px); /** Firefox **/
+  transform: translate(0,345px);
+  -webkit-transform: translate(0,345px); /** Safari & Chrome **/
+  -o-transform: translate(0,345px); /** Opera **/
+  -moz-transform: translate(0,345px); /** Firefox **/
 }
 .fixed-top .share  {
   margin-bottom: 0px;
