--- a/style.css
+++ b/style.css
@@ -3204,6 +3204,9 @@ blockquote {
 }
 
 @media all and (max-width: 1199px) {
+  .poster-prev {
+    left: 0px;
+  }
 
   .poster.size-350.normal .poster-image {
     width: 170px;
