--- a/style.css
+++ b/style.css
@@ -2672,7 +2672,7 @@ h2.heading span,
   padding: 12px 0px 10px 35px;
   font-size: 18px;
   display: inline-block;
-  color: #ff6226
+  color: #fff
 }
 .stat-views:before {
     content: "\64";
