--- a/style.css
+++ b/style.css
@@ -3988,11 +3988,11 @@ ul.page-numbers li {
   padding: 7px;
 }
 .mobile-menu-active .mt-smart-menu {
-  -webkit-transform: translate3d(100%, 0, 0);
-  -moz-transform: translate3d(100%, 0, 0);
-  -ms-transform: translate3d(100%, 0, 0);
-  -o-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
+  -webkit-transform: translate3d(400px, 0, 0);
+  -moz-transform: translate3d(400px, 0, 0);
+  -ms-transform: translate3d(400px, 0, 0);
+  -o-transform: translate3d(400px, 0, 0);
+  transform: translate3d(400px, 0, 0);
 }
 .mt-outer-wrap {
     position: relative;
