--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 /*-----------------------------------------------------------------------------------
   	Version: 1.0
     Theme Name: Rimi
-    Theme URI: http://rimi.tophot.staging.wpengine.com/
+    Theme URI: http://rimi02.madzathemes.com
     Description: Magazin / Blog
     Author: Madars Bitenieks
     Author URI: http://themeforest.net/user/madza
